Pass swipe gesture events over Mojo.

Bug: 913688
Change-Id: Ibd0124bd99389142c4538fdb6c55ca2c634f6f42
Reviewed-on: https://chromium-review.googlesource.com/c/1371164
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615449}
Former-commit-id: 1270bcb7a2f436fa681e2950d5204ece28098a11